# vector

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pw_allocator.h  pw_cstddef.cpp  pw_cstddef.h  pw_type_traits.h  pw_vector.cpp  pw_vector.h
pw/: CMakeLists.txt  algorithm  allocator  cstddef  initializer_list  iterator  memory  memory_resource  numeric_limits  pw.cpp  type_traits  utility  vector
pw/impl/: CMakeLists.txt  add_const.h  addressof.h  advance.h  allocator.h  allocator_traits.h  as_const.h  back_insert_iterator.h  back_inserter.h  bool_type.h  byte.cpp  conditional.h  construct_at.h  copy.h  declval.h  destroy.h  destroy_at.h  distance.h  equal.h  exchange.h  fill.h  fill_n.h  for_each.h  forward.h  initializer_list.h  integral_constant.h  is_base_of.h  is_class.h  is_constant_evaluated.h  is_constructible.h  is_empty.h  is_move_constructible.h  is_same.h  is_union.h  iterator_tag.h  iterator_tags.h  iterator_traits.h  lexicographical_compare.h  max.h  memory_resource_new_delete.cpp  (+28 more)
pw/impl/algorithm/: copy.h  equal.h  fill.h  for_each.h  lexicographical_compare.h  min.h  move_alg.h  move_backward.h
pw/impl/allocator/: allocator.h
pw/impl/cstddef/: max_align.h  ptrdiff.h  size.h
pw/impl/initializer_list/: initializer_list.h
pw/impl/iterator/: advance.h  back_insert_iterator.h  back_inserter.h  distance.h  iterator_tag.h  next.h  prev.h  reverse_iterator.h
pw/impl/memory/: allocation_result.h  (+12 more)
pw/internal/: CMakeLists.txt  allocate.h  allocator.h  allocator_detect.h  allocator_traits.h  bool_type.h  check_empty.h  compare.h  constructible.h  copy.h  copyconstruct.h  destroy.h  destroy_at.h  detect_prop.h  extract_or.h  fill.h  for_each.h  integral_constant.h  is_class.h  is_empty.h  is_same.h  is_supported.h  make_unsigned.h  max.h  memory_resource_new_delete.cpp  memory_resource_new_delete.h  memory_resource_null.cpp  memory_resource_null.h  meta.h  pointer_traits.h  ptrdiff.h  rsize_fix.h  size.h  storage.h  storage2.h  swap.h  unimplemented.h  void.h
test/: CMakeLists.txt  allocator_traits.t.cpp  distance.t.cpp  move.t.cpp  reverse_iterator.t.cpp  storage.t.cpp  test_copyconstructible.cpp  test_copyconstructible.h  test_defaultconstructible.cpp  test_defaultconstructible.h  test_defaultcopyconstructible.h  test_emplacemoveconstructible.cpp  test_emplacemoveconstructible.h  test_moveconstructible.cpp  test_moveconstructible.h  test_opcounter.cpp  test_opcounter.h  test_optracker.cpp  test_optracker.h  test_permute.h  test_random_access_iterator.h  test_same.h  test_testtype.h  testtype.h  uninitialized_move.t.cpp  vector.t.cpp  vector_access.t.cpp  vector_assign.t.cpp  vector_assignment.t.cpp  vector_at.t.cpp  vector_capacity.t.cpp  vector_clear.t.cpp  vector_constructor.t.cpp  vector_emplace.t.cpp  vector_erase.t.cpp  vector_insert.t.cpp  vector_iter.t.cpp  vector_pop_back.t.cpp  vector_push_back.t.cpp  vector_resize.t.cpp
tests/: CMakeLists.txt  allocator_traits.t.cpp  conscounter.cpp  conscounter.h  copyconstructible.cpp  copyconstructible.h  memory.t.cpp  opcounter.cpp  opcounter.h  optracker.cpp  optracker.h  permute.cpp  permute.h  permute.t.h  pw_internal_allocate.t.cpp  pw_internal_storage.t.cpp  pw_memory.t.cpp  pw_permute.t.h  pw_same.t.h  pw_vector.t.cpp  pw_vector_constructor.t.cpp  pw_vector_empty.t.cpp  random_access_iterator.h  reverse_iterator.t.cpp  storage.t.cpp  test_opcounter.cpp  test_optracker.cpp  test_optracker.h  test_permute.cpp  test_random_access_iterator.h  testtype.h  uninitialized_move.t.cpp  vector.t.cpp  vector_assign.t.cpp  vector_assignment.t.cpp  vector_at.t.cpp  vector_constructor.t.cpp  vector_emplace.t.cpp  vector_erase.t.cpp  vector_insert.t.cpp  (+2 more)
tests/basicunit/: CMakeLists.txt  allocator.h  basicunit_allocator.h  basicunit_allocator.t.cpp  basicunit_allocator_copy_assignment.h  basicunit_allocator_move_assignment.h  basicunit_allocator_swapable.h  basicunit_base_allocator.h  vector_constructor_exception_safety.t.cpp  vector_int.t.cpp
tests/catch2/: CMakeLists.txt
tests/test/: CMakeLists.txt  test_allocator_base.h  test_allocator_copy_assignment.h  test_allocator_first_type.h  test_allocator_is_always_equal.h  test_allocator_last_type.h  test_allocator_move_assignment.h  test_allocator_only_type.cpp  test_allocator_only_type.h  test_allocator_swapable.h  test_copyconstructible.cpp  test_copyconstructible.h  test_defaultconstructible.cpp  test_defaultconstructible.h  test_defaultcopyconstructible.cpp  test_defaultcopyconstructible.h  test_emplacemoveconstructible.cpp  test_emplacemoveconstructible.h  test_input_iterator.h  test_moveconstructible.cpp  test_moveconstructible.h  test_multi_exception_type.h  test_no_allocator_type.cpp  test_no_allocator_type.h  test_op_tracker_allocator_last.h  test_opcounter.cpp  test_opcounter.h  test_optracker.cpp  test_optracker.h  test_optracker_allocator_first.h  test_optracker_allocator_last.h  test_optracker_allocator_none.cpp  test_optracker_allocator_none.h  test_optracker_allocator_only.cpp  test_optracker_allocator_only.h  test_optracker_allocatoronly.cpp  test_optracker_allocatoronly.h  test_optracker_copyconstructible.cpp  test_optracker_copyconstructible.h  test_optracker_defaultconstructible.cpp  (+18 more)
tests/unit/: CMakeLists.txt  allocator_traits.t.cpp  copy.t.cpp  cstddef.t.cpp  distance.t.cpp  equal.t.cpp  exchange.t.cpp  is_constant_evaluated.t.cpp  is_constructible.t.cpp  is_empty.t.cpp  memory.t.cpp  move.t.cpp  reverse_iterator.t.cpp  storage.t.cpp  storage2.t.cpp  swap.t.cpp  uninitialized_copy.t.cpp  uninitialized_move.t.cpp  uses_allocator_construction_args.t.cpp  vector_1.t.cpp  vector_access.t.cpp  vector_assign.t.cpp  vector_assignment.t.cpp  vector_capacity.t.cpp  vector_clear.t.cpp  vector_compare.t.cpp  vector_constructor.t.cpp  vector_constructor_exception_safety.t.cpp  vector_emplace.t.cpp  vector_emplace_back.t.cpp  vector_erase.t.cpp  vector_insert.t.cpp  vector_int.t.cpp  vector_iter.t.cpp  vector_pop_back.t.cpp  vector_push_back.t.cpp  vector_reserve.t.cpp  vector_resize.t.cpp  vector_shrink_to_fit.t.cpp  vector_swap.t.cpp
(+45 files in other folders)
