add_library(${PROJECT_NAME}
        impl/byte.cpp
        impl/memory_resource/memory_resource_new_delete.cpp
        impl/memory_resource/memory_resource_null.cpp
        impl/memory_resource/pmr_memory_resource.cpp
        pw.cpp

        algorithm
        allocator
        cstddef
        memory
        memory_resource
        type_traits
        utility
        vector
)

target_include_directories(${PROJECT_NAME} PUBLIC
        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/pw>)

install(TARGETS ${PROJECT_NAME}
        DESTINATION lib)
install(FILES
        algorithm
        allocator
        cstddef
        iterator
        memory
        memory_resource
        type_traits
        utility
        vector
        DESTINATION include/pw)
install(FILES
        impl/add_const.h
        impl/add_rvalue_reference.h
        impl/advance.h
        impl/algorithm/copy.h
        impl/algorithm/equal.h
        impl/algorithm/lexicographical_compare.h
        impl/algorithm/max.h
        impl/algorithm/min.h
        impl/algorithm/move_alg.h
        impl/algorithm/move_backward.h
        impl/allocator/allocator.h
        impl/allocator_traits.h
        impl/as_const.h
        impl/bool_type.h
        impl/byte.h
        impl/conditional.h
        impl/construct_at.h
        impl/cstddef/ptrdiff.h
        impl/cstddef/size.h
        impl/declval.h
        impl/distance.h
        impl/exchange.h
        impl/fill.h
        impl/fill_n.h
        impl/for_each.h
        impl/forward.h
        impl/initializer_list.h
        impl/iterator/back_insert_iterator.h
        impl/iterator/back_inserter.h
        impl/iterator/iterator_tag.h
        impl/iterator_traits.h
        impl/make_unsigned.h
        impl/max_align.h
        impl/memory/addressof.h
        impl/memory/destroy.h
        impl/memory/destroy_at.h
        impl/memory/pointer_traits.h
        impl/memory/uninitialized_construct_using_allocator.h
        impl/memory/uninitialized_copy.h
        impl/memory/uninitialized_default_construct.h
        impl/memory/uninitialized_fill.h
        impl/memory/uninitialized_move.h
        impl/memory/uninitialized_value_construct.h
        impl/memory/uses_allocator_construction_args.h
        impl/memory_resource/memory_resource_new_delete.h
        impl/memory_resource/memory_resource_null.h
        impl/memory_resource/pmr_memory_resource.h
        impl/memory_resource/pmr_polymorphic_allocator.h
        impl/move.h
        impl/next.h
        impl/numeric_limits.h
        impl/prev.h
        impl/reverse_iterator.h
        impl/swap.h
        impl/type_traits/integral_constant.h
        impl/type_traits/is_base_of.h
        impl/type_traits/is_class.h
        impl/type_traits/is_constant_evaluated.h
        impl/type_traits/is_constructible.h
        impl/type_traits/is_convertible.h
        impl/type_traits/is_empty.h
        impl/type_traits/is_move_constructible.h
        impl/type_traits/is_same.h
        impl/type_traits/is_union.h
        impl/type_traits/remove_cv.h
        impl/type_traits/remove_reference.h
        impl/type_traits/void.h
        impl/vector_decl.h
        impl/vector_defn.h
        impl/vector_defn_empty.h
        DESTINATION include/pw/impl)
install(FILES
        internal/compare.h
        internal/constructible.h
        internal/detect_prop.h
        internal/extract_or.h
        internal/is_supported.h
        internal/meta.h
        internal/rsize_fix.h
        internal/storage.h
        internal/unimplemented.h
        DESTINATION include/pw/internal)
