add_library(pw-impl INTERFACE)

target_include_directories(
  pw-impl
  INTERFACE $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
            $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/pw/impl>)

target_sources(pw-impl INTERFACE
    add_const.h
    addressof.h
    advance.h
    allocator.h
    allocator_traits.h
    as_const.h
    back_insert_iterator.h
    back_inserter.h
    bool_type.h
    construct_at.h
    copy.h
    declval.h
    destroy.h
    destroy_at.h
    distance.h
    equal.h
    exchange.h
    fill.h
    fill_n.h
    for_each.h
    forward.h
    integral_constant.h
    is_class.h
    is_constructible.h
    is_convertible.h
    is_empty.h
    is_same.h
    iterator_tag.h
    iterator_traits.h
    lexicographical_compare.h
    make_unsigned.h
    max.h
    min.h
    move.h
    move_alg.h
    move_backward.h
    next.h
    pmr_polymorphic_allocator.h
    pointer_traits.h
    prev.h
    ptrdiff.h
    remove_reference.h
    reverse_iterator.h
    size.h
    swap.h
    uninitialized_copy.h
    uninitialized_default_construct.h
    uninitialized_fill.h
    uninitialized_move.h
    uninitialized_value_construct.h
    void.h
    )
