add_library(pwtest
        test_copyconstructible.cpp
        test_defaultconstructible.cpp
        test_defaultcopyconstructible.cpp
        test_emplacemoveconstructible.cpp
        test_moveconstructible.cpp
        test_no_allocator_type.cpp
        test_opcounter.cpp
        test_optracker.cpp
        test_permute.cpp
        test_throwingtype.cpp
        test_allocator_is_always_equal.h
        test_allocator_only_type.cpp
)
target_sources(pwtest PUBLIC
        test_allocator_copy_assignment.h
        test_allocator_move_assignment.h
        test_allocator_swapable.h
        test_allocator_base.h
        test_allocator_first_type.h
        test_allocator_last_type.h
        test_allocator_only_type.h
        test_copyconstructible.h
        test_defaultconstructible.h
        test_defaultcopyconstructible.h
        test_emplacemoveconstructible.h
        test_input_iterator.h
        test_moveconstructible.h
        test_no_allocator_type.h
        test_opcounter.h
        test_optracker.h
        test_permute.h
        test_random_access_iterator.h
        test_same.h
        test_testtype.h
        test_values.h
)
target_link_libraries(pwtest pw)

target_include_directories(pwtest
        PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
