add_library(pwtest
        test_opcounter.cpp
        test_optracker.cpp
        test_optracker_allocator_none.cpp
        test_optracker_allocator_only.cpp
        test_optracker_copyconstructible.cpp
        test_optracker_defaultconstructible.cpp
        test_optracker_defaultcopyconstructible.cpp
        test_optracker_emplacemoveconstructible.cpp
        test_optracker_moveconstructible.cpp
        test_permute.cpp
        test_throwingtype.cpp
)
target_sources(pwtest PUBLIC
        test_allocator_base.h
        test_allocator_copy_assignment.h
        test_allocator_is_always_equal.h
        test_allocator_move_assignment.h
        test_allocator_swapable.h
        test_input_iterator.h
        test_opcounter.h
        test_optracker.h
        test_optracker_allocator_first.h
        test_optracker_allocator_last.h
        test_optracker_allocator_none.h
        test_optracker_allocator_only.h
        test_optracker_copyconstructible.h
        test_optracker_defaultconstructible.h
        test_optracker_defaultcopyconstructible.h
        test_optracker_emplacemoveconstructible.h
        test_optracker_moveconstructible.h
        test_permute.h
        test_random_access_iterator.h
        test_same.h
        test_testtype.h
        test_values.h
)
target_link_libraries(pwtest pw)

target_include_directories(pwtest
        PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
